--- a/app/public/app/view/pages/index.html
+++ b/app/public/app/view/pages/index.html
@@ -38,6 +38,7 @@
     <script src="app.js"></script>
     <script src="routes.js"></script>
     <script src="assets/js/angular-route.min.js"></script>
+    <script src="controller/userCtrl.js"></script>
 </head>
 <body ng-app="UserMgmt">
 <div class="container">
@@ -65,8 +66,8 @@
 
     <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
-            <a class="p-2 text-muted" href="#">World</a>
-            <a class="p-2 text-muted" href="#">U.S.</a>
+            <a class="p-2 text-muted" href="/">home</a>
+            <a class="p-2 text-muted" href="/about">about</a>
             <a class="p-2 text-muted" href="#">Technology</a>
             <a class="p-2 text-muted" href="#">Design</a>
             <a class="p-2 text-muted" href="#">Culture</a>
@@ -75,17 +76,17 @@
             <a class="p-2 text-muted" href="#">Opinion</a>
             <a class="p-2 text-muted" href="#">Science</a>
             <a class="p-2 text-muted" href="#">Health</a>
-            <a class="p-2 text-muted" href="#">Style</a>
-            <a class="p-2 text-muted" href="#">Travel</a>
+            <a class="p-2 text-muted" href="#">SignIn</a>
+            <a class="p-2 text-muted" href="/SignUp">SignUp</a>
         </nav>
     </div>
 
 </div>
 
 <main role="main" class="container" ng-app="UserMgmt">
-    <div class="row">
+    <div class="row" style="width:100%">
 
-
+<div ng-view style="width:100%"></div>
 
     </div><!-- /.row -->
 
