--- a/app/public/app/view/pages/index.html
+++ b/app/public/app/view/pages/index.html
@@ -25,6 +25,7 @@
             }
         }
     </style>
+    <!------ Include the above in your HEAD tag ---------->
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <!-- Custom styles for this template -->
