--- a/app/public/app/view/pages/users/login.html
+++ b/app/public/app/view/pages/users/login.html
@@ -1,21 +1,20 @@
 <div  align="center" class="page-header">
-    <h1>User Registration </h1>
+    <h1>User Login Panel</h1>
 </div>
+
 <div >
-    <form  ng-submit="Register.RegClick(RegData);">
-        <label style="float:left">Username : </label>
-        <input type="text" placeholder="Enter Your Username" class="form-control" ng-model="Register.RegData.name">
+    <form ng-submit="Login.Login(logData);"  >
         <label style="float:left">Email : </label>
-        <input type="email" placeholder="Enter Your Email" class="form-control" ng-model="Register.RegData.email">
+        <input type="email" placeholder="Enter Your Email" name="email" class="form-control" ng-model="Login.logData.email">
         <label style="float:left">Password : </label>
-        <input type="password" placeholder="Enter Your Password" class="form-control" ng-model="Register.RegData.pass">
+        <input type="password" placeholder="Enter Your Password" name="pass" class="form-control" ng-model="Login.logData.pass">
         <br>
         <button class="btn btn-primary" type="submit" style="width:100%">SignUp</button>
     </form>
 </div>
 
 <div class=" text-center" ng-show="Register.loading">
-<span class="glyphicon glyphicon-repeat normal-right-spinner"></span>
+    <span class="glyphicon glyphicon-repeat normal-right-spinner"></span>
     <p>  <div class="spinner-grow text-muted"></div>
     <div class="spinner-grow text-primary"></div>
     <div class="spinner-grow text-success"></div>
