--- a/app/public/app/view/pages/index.html
+++ b/app/public/app/view/pages/index.html
@@ -46,15 +46,18 @@
     <link rel="stylesheet" href="assets/css/animate.css">
     <script src="assets/js/angular-animate.min.js"></script>
 </head>
-<body ng-app="UserMgmt">
+<body ng-app="UserMgmt" ng-controller="LoginCtrl as main">
 <div class="container">
     <header class="blog-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
-                 <a class="btn btn-sm btn-outline-secondary" href="/SignIn">Sign in</a>
+                <div ng-if="!main.logs" ><a class="btn btn-sm btn-outline-secondary" href="/SignIn">Sign in</a>
+                </div>
+                <div  ng-if="main.logs" ><a class="btn btn-sm btn-outline-secondary" ng-click="main.logout();">Sign Out</a>
+                </div>
             </div>
             <div class="col-4 text-center">
-                <a class="blog-header-logo text-dark" href="#">User </a>
+                <a class="blog-header-logo text-dark" href="#">User  </a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="text-muted" href="#">
@@ -92,17 +95,16 @@
 <main role="main" class="container" ng-app="UserMgmt">
     <div class="row" style="width:100%">
 
-<div ng-view style="width:100%"></div>
+        <div ng-view style="width:100%"></div>
 
     </div><!-- /.row -->
 
 </main><!-- /.container -->
 
-<footer class="blog-footer">
-    <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.
-    </p>
+<footer class="blog-footer fixed">
+    <p> All Right Reserved </p>
     <p>
-        <a href="#">Back to top</a>
+        ` <a href="#">Back to top</a>
     </p>
 </footer>
 
