--- a/app/public/app/view/pages/index.html
+++ b/app/public/app/view/pages/index.html
@@ -51,13 +51,14 @@
     <header class="blog-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
-                <div ng-if="!main.logs" ><a class="btn btn-sm btn-outline-secondary" href="/SignIn">Sign in</a>
+                <div ng-if="!main.logs"><a class="btn btn-sm btn-outline-secondary" href="/SignIn">Sign in</a>
                 </div>
-                <div  ng-if="main.logs" ><a class="btn btn-sm btn-outline-secondary" ng-click="main.logout();">Sign Out</a>
+                <div ng-if="main.logs"><a class="btn btn-sm btn-outline-secondary" ng-click="main.logout();">Sign
+                    Out</a>
                 </div>
             </div>
             <div class="col-4 text-center">
-                <a class="blog-header-logo text-dark" href="#">User  </a>
+                <a class="blog-header-logo text-dark" href="#">User </a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="text-muted" href="#">
