--- a/app/public/app/view/pages/index.html
+++ b/app/public/app/view/pages/index.html
@@ -28,6 +28,7 @@
     <!------ Include the above in your HEAD tag ---------->
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom styles for this template -->
     <script type="text/javascript" src="chrome-extension://aadgmnobpdmgmigaicncghmmoeflnamj/ng-inspector.js"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -61,20 +62,15 @@
                 <a class="blog-header-logo text-dark" href="#">User </a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="text-muted" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                         stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img"
-                         viewBox="0 0 24 24" focusable="false"><title>Search</title>
-                        <circle cx="10.5" cy="10.5" r="7.5"></circle>
-                        <path d="M21 21l-5.2-5.2"></path>
-                    </svg>
+                <a class="btn-outline-secondary" ng-show="main.logs" href="/profile"><i class="fa fa-user " aria-hidden="true"></i> <b>{{
+                    main.user}} &nbsp;</b>
                 </a>
                 <a class="btn btn-sm btn-outline-secondary" href="/SignUp">Sign up</a>
             </div>
         </div>
     </header>
 
-    <div class="nav-scroller py-1 mb-2">
+    <div class="nav-scroller py-1 mb-2 navbar navbar-default navbar-fixed-bottom">
         <nav class="nav d-flex justify-content-between">
             <a class="p-2 text-muted" href="/">home</a>
             <a class="p-2 text-muted" href="/about">about</a>
@@ -95,14 +91,12 @@
 
 <main role="main" class="container" ng-app="UserMgmt">
     <div class="row" style="width:100%">
-
-        <div ng-view style="width:100%"></div>
-
+        <div ng-view style="width:100%;height:100%"></div>
     </div><!-- /.row -->
 
 </main><!-- /.container -->
 
-<footer class="blog-footer fixed">
+<footer class="blog-footer fixed " >
     <p> All Right Reserved </p>
     <p>
         ` <a href="#">Back to top</a>
